fix for clicking camera input on mobile closing dropdown

--- a/src/scss/custom/search.scss
+++ b/src/scss/custom/search.scss
@@ -1,7 +1,6 @@
 .input-search {
 	appearance: none;
 	background-color: transparent;
-	border: 1px $input-border solid;
 	color: $white;
 	border: 0;
 	box-shadow: none !important;
@@ -16,12 +15,14 @@
 }
 
 .search-dropdown {
+	@extend %scrollbar-grey;
 	display: none;
 	width: 100%;
-	overflow: hidden;
+	overflow: auto;
 	background-color: $black;
 	border: 1px $input-border solid;
 	color: $grey-medium;
+	max-height: 240px;
 	z-index: $z-search;
 
 	@include media-breakpoint-up(lg) {
